[gd_scene load_steps=5 format=2]

[ext_resource path="res://sai/elesis/elesis.png" type="Texture" id=1]
[ext_resource path="res://enities/players/new_template_char.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/char_copy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 120 )

[node name="char" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 1 )

[node name="dash_length_timer" type="Timer" parent="." index="4"]
wait_time = 0.1
one_shot = true

[node name="dash_trigger_right_timer" type="Timer" parent="." index="5"]
wait_time = 0.3
one_shot = true

[node name="dash_trigger_left_timer" type="Timer" parent="." index="6"]
wait_time = 0.3
one_shot = true

[node name="downward_dash_timer" type="Timer" parent="." index="7"]
wait_time = 0.2

[node name="Area2D" type="Area2D" parent="." index="8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="StunTimer" type="Timer" parent="." index="9"]
wait_time = 0.3

[connection signal="timeout" from="dash_length_timer" to="." method="_on_dash_length_timer_timeout"]
[connection signal="timeout" from="dash_trigger_right_timer" to="." method="_on_dash_trigger_right_timer_timeout"]
[connection signal="timeout" from="dash_trigger_left_timer" to="." method="_on_dash_trigger_left_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
